add notice,add domain,view notices,view domain functionalities complete

--- a/app/src/main/res/layout/activity_add_notice.xml
+++ b/app/src/main/res/layout/activity_add_notice.xml
@@ -6,4 +6,65 @@
     android:layout_height="match_parent"
     tools:context=".AddNotice">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Sender of notice"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/et_sender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Subject"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/et_sender"
+        app:layout_constraintTop_toBottomOf="@+id/et_sender" />
+
+    <EditText
+        android:id="@+id/et_subject"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/tv_upload_file"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Upload file"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/et_subject"
+        app:layout_constraintTop_toBottomOf="@+id/et_subject" />
+
+    <Button
+        android:id="@+id/upload_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="upload"
+        app:layout_constraintStart_toStartOf="@+id/tv_upload_file"
+        app:layout_constraintTop_toBottomOf="@+id/tv_upload_file" />
 </androidx.constraintlayout.widget.ConstraintLayout>
