--- a/app/src/main/res/menu/domains.xml
+++ b/app/src/main/res/menu/domains.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/menu_domains"
+    <item android:id="@+id/to_new_domains"
         android:title="Add domian"
+        />
+    <item android:id="@+id/to_new_notice"
+        android:title="Add notice"
         />
 </menu>
