improved UI,added notice activity

--- a/app/src/main/res/layout/activity_add_domain.xml
+++ b/app/src/main/res/layout/activity_add_domain.xml
@@ -1,31 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddDomain">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/Theme.FinalYearProject"
+        />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/wraper_domain_name"
+        android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/margin_to_top"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:text="Enter Domain name"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_below="@+id/toolbar"
+        android:layout_marginStart="@dimen/margin_start"
+        android:layout_marginEnd="@dimen/margin_start"
+        >
+        <EditText
+            android:id="@+id/et_domain_name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Enter Domain Name"
+            android:inputType="textNoSuggestions"
+            android:maxLines="1"
+            android:layout_margin="@dimen/edit_text_margin"
+            android:textAlignment="center"
+            android:singleLine="true"
+             />
 
-    <EditText
-        android:id="@+id/et_domain_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
+
+</RelativeLayout>
