--- a/app/src/main/res/layout/domain_container.xml
+++ b/app/src/main/res/layout/domain_container.xml
@@ -3,15 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <ScrollView
         android:id="@+id/top_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         >
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/domain_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
