--- a/app/src/main/res/layout/domain_name_card.xml
+++ b/app/src/main/res/layout/domain_name_card.xml
@@ -2,13 +2,15 @@
 
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_margin="@dimen/card_margin"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
     <RelativeLayout
         android:id="@+id/domain_card"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:padding="20dp">
 
         <TextView
             android:id="@+id/tv_domain_name"
@@ -16,7 +18,8 @@
             android:layout_height="wrap_content"
             android:text="domain name"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@color/design_default_color_on_secondary" />
     </RelativeLayout>
 
 </com.google.android.material.card.MaterialCardView>
