--- a/app/src/main/res/layout/notice_card.xml
+++ b/app/src/main/res/layout/notice_card.xml
@@ -2,13 +2,15 @@
 
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_margin="@dimen/card_margin"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
     <RelativeLayout
         android:id="@+id/notice_card"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:padding="20dp">
 
         <TextView
             android:id="@+id/tv_sender"
@@ -16,31 +18,59 @@
             android:layout_height="wrap_content"
             android:text="Sender"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@color/design_default_color_on_secondary"/>
         <TextView
             android:id="@+id/tv_subject"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Subject"
-            android:textSize="20sp"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:textSize="15sp"
             android:layout_below="@+id/tv_sender"
-
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@color/design_default_color_on_secondary"/>
         <TextView
-            android:id="@+id/tv_file"
+            android:id="@+id/tv_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="file"
-            android:textSize="20sp"
+            android:text="description"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:textSize="15sp"
             android:layout_below="@+id/tv_subject"
-            android:textStyle="bold" />
+             />
 
-        <Button
-            android:id="@+id/notice_download_button"
+
+        <TextView
+            android:id="@+id/tv_from"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_file"
-            android:text="open file" />
+            android:layout_marginStart="@dimen/margin_start"
+            android:padding="3dp"
+            android:layout_toRightOf="@+id/tv_sender"
+            android:text="from" />
+
+        <TextView
+            android:id="@+id/tv_from_domain_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_start"
+            android:text="domain"
+            android:layout_toRightOf="@+id/tv_from"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/design_default_color_on_secondary"/>
+
+        <!--        <Button-->
+<!--            android:id="@+id/notice_download_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@+id/tv_file"-->
+<!--            android:text="open file"-->
+<!--            android:visibility="gone"-->
+<!--            />-->
     </RelativeLayout>
 
 </com.google.android.material.card.MaterialCardView>
