--- a/app/src/main/res/menu/new_domain.xml
+++ b/app/src/main/res/menu/new_domain.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     xmlns:app="http://schemas.android.com/apk/res-auto"
     <item android:id="@+id/save_domain"
-        android:title="Save domain"
+        android:title="Save subdomain"
         />
 </menu>
