--- a/app/src/main/res/layout/activity_add_admin.xml
+++ b/app/src/main/res/layout/activity_add_admin.xml
@@ -1,23 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:id="@+id/drawer_layout"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-    >
-
-<com.google.android.material.navigation.NavigationView
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:id="@+id/nav_view"
-    app:headerLayout="@layout/header"
-    app:menu="@menu/navigation_menu"
-    android:layout_gravity="start"
-    />
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -33,7 +14,7 @@
         android:theme="@style/Theme.FinalYearProject"
         />
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/wraper_domain_name"
+        android:id="@+id/wraper_admin_name"
         android:layout_width="match_parent"
         android:layout_marginTop="@dimen/margin_to_top"
         android:layout_height="wrap_content"
@@ -42,17 +23,22 @@
         android:layout_marginEnd="@dimen/margin_start"
         >
         <EditText
-            android:id="@+id/et_domain_name"
+            android:id="@+id/et_admin_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Enter Domain Name"
+            android:hint="Enter Email of User"
             android:inputType="textNoSuggestions"
             android:maxLines="1"
             android:layout_margin="@dimen/edit_text_margin"
             android:textAlignment="center"
             android:singleLine="true"
-             />
+            />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/admin_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/wraper_admin_name" />
 </RelativeLayout>
-</androidx.drawerlayout.widget.DrawerLayout>
