--- a/app/src/main/res/layout/activity_add_notice.xml
+++ b/app/src/main/res/layout/activity_add_notice.xml
@@ -15,7 +15,7 @@
     android:layout_height="match_parent"
     android:id="@+id/nav_view"
     app:headerLayout="@layout/header"
-    app:menu="@menu/main_menu"
+    app:menu="@menu/navigation_menu"
     android:layout_gravity="start"
     />
 <androidx.constraintlayout.widget.ConstraintLayout
