--- a/app/src/main/res/layout/activity_add_notice.xml
+++ b/app/src/main/res/layout/activity_add_notice.xml
@@ -19,9 +19,6 @@
     android:layout_gravity="start"
     />
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.AddNoticeActivity">
@@ -36,34 +33,12 @@
         app:layout_constraintTop_toTopOf="parent"
          />
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/wraper_et_sender"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_to_top"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        android:layout_marginStart="@dimen/margin_start"
-        android:layout_marginEnd="@dimen/margin_start">
-        <EditText
-            android:id="@+id/et_sender"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Enter Sender Name"
-            android:maxLines="1"
-            android:inputType="text"
-            android:textAlignment="viewStart"
-            android:layout_margin="@dimen/edit_text_margin"
-            android:singleLine="true"
-            />
-
-    </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/wraper_et_subject"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_to_top_view"
-        app:layout_constraintStart_toStartOf="@+id/wraper_et_sender"
-        app:layout_constraintTop_toBottomOf="@+id/wraper_et_sender"
+        app:layout_constraintStart_toStartOf="@+id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         android:layout_marginStart="@dimen/margin_start"
         android:layout_marginEnd="@dimen/margin_start">
         <EditText
@@ -96,16 +71,43 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <RadioGroup
+        android:id="@+id/comments"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/wraper_et_description">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/edit_text_margin"
+            android:text="Comments permissins" />
+
+        <RadioButton
+            android:id="@+id/comment_allow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="7dp"
+            android:checked="true"
+            android:text="allow comments" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="7dp"
+            android:text="disble comments" />
+    </RadioGroup>
+
     <TextView
         android:id="@+id/tv_upload_file"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_to_top_view"
-        android:textSize="16sp"
         android:layout_marginStart="@dimen/margin_start"
-        android:layout_marginEnd="@dimen/margin_start"
+        android:layout_marginTop="10dp"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/wraper_et_description"
-        app:layout_constraintTop_toBottomOf="@+id/wraper_et_description" />
+        app:layout_constraintTop_toBottomOf="@+id/comments" />
 
     <Button
         android:id="@+id/upload_button"
