--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -10,14 +10,14 @@
     tools:openDrawer="start"
     >
 
-<com.google.android.material.navigation.NavigationView
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:id="@+id/nav_view"
-    app:headerLayout="@layout/header"
-    app:menu="@menu/navigation_menu"
-    android:layout_gravity="start"
-    />
+<!--<com.google.android.material.navigation.NavigationView-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="match_parent"-->
+<!--    android:id="@+id/nav_view"-->
+<!--    app:headerLayout="@layout/header"-->
+<!--    app:menu="@menu/navigation_menu"-->
+<!--    android:layout_gravity="start"-->
+<!--    />-->
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -118,7 +118,65 @@
             android:text="TextView"
             />
     </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/comment_section"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="0dp">
+        <TextView
+            android:id="@+id/comments_page"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_to_top_view"
+            android:text="Comments"
+            android:layout_margin="@dimen/edit_text_margin"
+            />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/comments_rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/comments_page"
+        tools:listitem="@layout/comment_item"
+        tools:itemCount="5"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/comments_rv"
+            android:orientation="vertical"
+            >
+            <ImageView
+                android:id="@+id/imageviewchatimage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <EditText
+                android:id="@+id/inputcomment"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:hint="Enter Text"
+                app:layout_constraintEnd_toStartOf="@+id/imageView_send_comment"
+                app:layout_constraintStart_toEndOf="@+id/imageviewchatimage"
+                app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/imageView_send_comment"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
+                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
+                app:layout_constraintTop_toTopOf="@+id/constraintLayout"
+                app:srcCompat="@drawable/send_24" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
