--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -5,20 +5,32 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/home_24"
             android:title="Home" />
-        <item
-            android:id="@+id/to_new_domains"
-            android:icon="@drawable/add_24"
-            android:title="Add Subdomain" />
-        <item
-            android:id="@+id/to_new_notice"
-            android:icon="@drawable/send_24"
-            android:title="Send Notice" />
+        <group android:id="@+id/nav_for_admin">
+            <item
+                android:id="@+id/to_new_domains"
+                android:icon="@drawable/group_add_24"
+                android:title="Add Subdomain" />
+            <item
+                android:id="@+id/to_new_notice"
+                android:icon="@drawable/send_24"
+                android:title="Send Notice" />
+        </group>
         <item
             android:id="@+id/choose_institution"
             android:icon="@drawable/domain_24"
-            android:title="Change Domain" />
+            android:title="Change Institution" />
+        <item
+            android:id="@+id/add_institution"
+            android:icon="@drawable/business_24"
+            android:title="Register for new Institution" />
+        <item
+            android:id="@+id/about_institution"
+            android:icon="@drawable/info_24"
+            android:title="About Institution" />
+
 
     </group>
+
 
 <!--    <item android:title="Account">-->
 <!--        <menu>-->
