--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="edit_text_margin">16dp</dimen>
     <dimen name="multiline_et_height">95dp</dimen>
     <dimen name="padding_layout">20dp</dimen>
+    <dimen name="card_padding">10dp</dimen>
 </resources>
