--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -118,34 +118,38 @@
             android:text="TextView"
             />
     </LinearLayout>
+
     <RelativeLayout
         android:id="@+id/comment_section"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/open_file"
         tools:layout_editor_absoluteX="0dp">
+
         <TextView
             android:id="@+id/comments_page"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_to_top_view"
-            android:text="Comments"
             android:layout_margin="@dimen/edit_text_margin"
-            />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/comments_rv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/comments_page"
-        tools:listitem="@layout/comment_item"
-        tools:itemCount="5"/>
+            android:layout_marginTop="@dimen/margin_to_top_view"
+            android:text="Comments" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/comments_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/comments_page"
+            tools:itemCount="5"
+            tools:listitem="@layout/comment_item" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/comments_rv"
-            android:orientation="vertical"
-            >
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/imageviewchatimage"
                 android:layout_width="40dp"
@@ -165,6 +169,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/imageView_send_comment"
                 app:layout_constraintStart_toEndOf="@+id/imageviewchatimage"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/imageView_send_comment"
                 android:layout_width="35dp"
