--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -1,38 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="@dimen/card_margin"
-    android:padding="@dimen/card_padding"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
-    tools:context=".Activities.CommentAdapter">
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:context=".Activities.CommentAdapter">
 
 
         <TextView
             android:id="@+id/username_comment"
+            android:layout_marginHorizontal="@dimen/edit_text_margin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="2dp"
             android:text="Username"
             android:textColor="@color/colorPrimary"
             />
 
         <TextView
             android:id="@+id/textview_comment"
+            android:layout_marginHorizontal="@dimen/edit_text_margin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="8dp"
             android:text="This is a comment"
             android:textSize="12sp"
              />
     </LinearLayout>
 
-</com.google.android.material.card.MaterialCardView>
